[FIX] S3Service.uploadImageFromUrl() 리소스 누수 및 deprecated API 수정
- InputStream을 try-with-resources로 감싸 리소스 누수 방지
- new URL(imageUrl) → URI.create(imageUrl).toURL() 로 변경 (Java 20+ deprecated 대응)
- contentType 중복 파싱 제거 (mimeType 변수로 추출)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>