@@ -15,8 +15,9 @@ import software.amazon.awssdk.services.s3.model.PutObjectRequest;
 import software.amazon.awssdk.services.s3.model.S3Exception;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.UUID;
 
 @Service
@@ -52,7 +53,7 @@ public class S3Service {
 
     public String uploadImageFromUrl(String imageUrl, String bucketName, String dirName, String referer) {
         try {
-            HttpURLConnection conn = (HttpURLConnection) new URL(imageUrl).openConnection();
+            HttpURLConnection conn = (HttpURLConnection) URI.create(imageUrl).toURL().openConnection();
             conn.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36");
             conn.setRequestProperty("Referer", referer);
             conn.connect();
@@ -62,20 +63,25 @@ public class S3Service {
                 throw new S3UploadException(ErrorCode.S3_UPLOAD_ERROR);
             }
 
-            String ext = switch (contentType.split(";")[0].trim()) {
+            String mimeType = contentType.split(";")[0].trim();
+            String ext = switch (mimeType) {
                 case "image/jpeg" -> ".jpg";
                 case "image/png" -> ".png";
                 case "image/webp" -> ".webp";
                 default -> ".jpg";
             };
 
-            byte[] imageBytes = conn.getInputStream().readAllBytes();
+            byte[] imageBytes;
+            try (InputStream is = conn.getInputStream()) {
+                imageBytes = is.readAllBytes();
+            }
+
             String fileName = dirName + "/" + UUID.randomUUID() + ext;
 
             s3Client.putObject(PutObjectRequest.builder()
                     .bucket(bucketName)
                     .key(fileName)
-                    .contentType(contentType.split(";")[0].trim())
+                    .contentType(mimeType)
                     .build(),
                     RequestBody.fromBytes(imageBytes));
 
